# AI-QFund

./: .gitignore  AGENTS.md  data_foundation.py  evolve.py  fetch.py  init_db.py  monitor.py  probe_apis.py  pyproject.toml  recommend.py
.opencode/skills/ask-matt/: SKILL.md
.opencode/skills/blueprint/: SKILL.md  output-format.md  quality-constraints.md
.opencode/skills/implement/: SKILL.md
.opencode/skills/prototype/: LOGIC.md  SKILL.md  UI.md
.opencode/skills/setup-matt-pocock-skills/: SKILL.md  issue-tracker-local.md
.opencode/skills/to-spec/: SKILL.md
.opencode/skills/to-tickets/: SKILL.md
.opencode/skills/wayfinder/: SKILL.md
.opencode/skills/writing-great-skills/: GLOSSARY.md  SKILL.md
config/: settings.toml
data/: schema.sql
docs/: DEVELOPMENT_PLAN.md  README.md  UI_PROMPT.md
models/: lgb_model.txt
