[project]
name = "ai-qfund"
version = "0.1.0"
description = "AI 驱动的基金量化投研系统"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "numpy",
    "scipy",
    "lightgbm",
    "fastapi",
    "streamlit",
    "plotly",
    "jinja2",
    "openai",
    "curl-cffi>=0.15.0",
    "httpx>=0.28.1",
    "tls-client>=1.0.1",
    "aiohttp>=3.14.1",
]

[tool.uv]
package = false
